--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, alias obcaecati cumque delectus cupiditate quam in nobis nam adipisci ab qui, dicta fugiat sequi exercitationem dolores nostrum fugit laborum? Nesciunt!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo hic ad aspernatur. Sequi, voluptate magnam! Expedita alias laborum, provident soluta minus suscipit perferendis, quisquam a atque, aperiam impedit eligendi nisi?</p>
         </article>
     </main>
 </body>
